@@ -200,7 +200,7 @@ public class Envelope extends GMLObject implements SRSReference, CoordinateListP
 
     public boolean contains(double... ordinates) {
         return ordinates != null
-                && contains(Arrays.stream(ordinates).boxed().collect(Collectors.toList()));
+                && contains(Arrays.stream(ordinates).boxed().toList());
     }
 
     public boolean contains(List<Double> ordinates) {
@@ -263,7 +263,7 @@ public class Envelope extends GMLObject implements SRSReference, CoordinateListP
 
     public Envelope include(double... ordinates) {
         if (ordinates != null)
-            include(Arrays.stream(ordinates).boxed().collect(Collectors.toList()));
+            include(Arrays.stream(ordinates).boxed().toList());
 
         return this;
     }
